devel
-----

* BTS-1340: Fixed telemetrics API making shell hang when logging into it and 
  leaving it too quickly so the telemetrics API doesn't have time to send the 
  data to the warehouse. The thread could be hanging on SSL_connect() until 
  the connection timeout if the socket is blocking, so the socket was made 
  non-blocking for the thread to leave SSL_connect() after the connection is 
  interrupted when leaving the shell. Also created startup parameter 
  `--client.failure-points` for arangosh which enables failure points whose 
  names are provided in an array of strings, just like in 
  `--server.failure-point` for arangod.

* BTS-1350: Fixed imprecision in index info in telemetrics object for cluster.
  When the collection also had an arangosearch view, telemetrics showed 
  imprecise index values because the view was being considered as an index 
  of type arangosearch, and its object wouldn't contain expected fields that 
  would be found in other indexes' objects. 

* Add metric `arangodb_file_descriptors_current` to expose the number of
  file descriptors currently opened by the arangod process. This metric is
  available on Linux only.
  As counting the number of open file descriptors can be expensive, this
  metric is only updated in a configurable interval. The new startup option
  `--server.descriptors-count-interval` can be used to specify the update
  interval (in milliseconds). It defaults to 60,000 (i.e. once per minute).
  The startup option can be set to a value of `0` to disable the counting
  of open file descriptors for performance reasons.
  If counting is turned off, the metric will report a value of `0`.

* ES-1566: fix an issue when trying to restrict traversals to non-existing
  collections with the `edgeCollections` traversal option.
  
  If a non-existing collection is specified in the `edgeCollections` or
  `vertexCollections` options of an AQL traversal, the query will now fail 